--- a/index copy.html
+++ b/index copy.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="stylesheet.css"/>
-		<script type="text/javascript" src="script.js"></script>
+		<link rel="stylesheet" href="stylesheet copy.css"/>
+		<script type="text/javascript" src="script copy.js"></script>
 	</head>
 	<body>
 	<header>
